[package]
name = "slamdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.10"
rand = "^0.8.0"
rand_distr = "0.4.3"
num-traits = "0.2.15"
nalgebra = "0.31.1"